manifests/blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linusthorsell.se
        - www.linusthorsell.se
      secretName: blog-tls
  rules:
    - host: linusthorsell.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  number: 80
    - host: www.linusthorsell.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase
  namespace: blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pb.linusthorsell.se
      secretName: pocketbase-tls
  rules:
    - host: pb.linusthorsell.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketbase
                port:
                  number: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase-admin
  namespace: blog
spec:
  ingressClassName: tailscale
  rules:
    - host: pb.linusthorsell.se
      http:
        paths:
          - path: /_/
            pathType: Prefix
            backend:
              service:
                name: pocketbase
                port:
                  number: 8090
